--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
