--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "sass": "^1.70.0",
     "url": "^0.11.3",
     "util": "^0.12.5",
